--- a/src/main/resources/templates/admin/points.html
+++ b/src/main/resources/templates/admin/points.html
@@ -182,7 +182,11 @@
                 <input type="number" step="0.1" value="0.5">
             </div>
 
-            <button class="save-btn">정책 저장하기</button>
+<!--            // action : 정책 저장하는 api 수정하기-->
+            <form method="post" action="">
+                <input type="submit" value="정책 저장하기" class="save-btn">
+            </form>
+
             <div class="updated-info">최근 수정: 2025-11-10 (관리자 ID: 1)</div>
         </div>
     </main>
