--- a/src/main/resources/templates/order/coupon-register.html
+++ b/src/main/resources/templates/order/coupon-register.html
@@ -122,7 +122,10 @@
                     <h4>신규 도서 10% 할인 쿠폰</h4>
                     <p>최대 5,000원 할인 | 유효기간: 30일</p>
                 </div>
-                <button class="btn-download">다운로드</button>
+
+                <form method="post" action="">
+                    <button class="btn-download">다운로드</button>
+                </form>
             </div>
 
             <div class="download-coupon-card">
@@ -130,9 +133,11 @@
                     <h4>첫 구매 감사 3,000원</h4>
                     <p>5,000원 이상 구매 시 사용 가능</p>
                 </div>
-                <button class="btn-download">다운로드</button>
-            </div>
 
+                <form method="post" action="">
+                    <button class="btn-download">다운로드</button>
+                </form>
+            </div>
         </div>
     </div>
 
