--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -579,7 +579,7 @@
                 <article class="slide" aria-roledescription="slide">
                     <div class="copy">
                        <div>이 책을 덮는 순간, '어제의 나'와 작별하게 될 겁니다</div>
-                       <img src="../static/img/위로의 방식.jpg"
+                       <img src="static/img/위로의 방식.jpg"
                             width="700" height="500">
                     </div>
                     <div>
