feat:image change

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -517,7 +517,7 @@
 <header id="header" role="banner">
     <div class="container">
         <a href="./main.html" class="logo">
-            <img src="../img/logo.png" alt="HIGH-FIVE 로고"/>
+<!--            <img src="../img/logo.png" alt="HIGH-FIVE 로고"/>-->
             <div class="brand">HIGH-FIVE BOOKS</div>
         </a>
 
