프론트 수정중

--- a/src/main/resources/templates/order/mypage.html
+++ b/src/main/resources/templates/order/mypage.html
@@ -964,7 +964,7 @@
     </section>
 
     <section id="tab-points" class="tab-content"
-             th:classappend="${currentTab == 'coupons'} ? 'active' : ''">
+             th:classappend="${currentTab == 'points'} ? 'active' : ''">
         <h2 class="section-title">포인트 관리</h2>
         <div class="points-container">
             <div class="points-box">
