--- a/src/main/resources/templates/order/ordersuccess.html
+++ b/src/main/resources/templates/order/ordersuccess.html
@@ -330,6 +330,8 @@
             <a class="user-link" href="/cart">
                 <img src="../img/icon-cart.png" alt="장바구니" class="user-icon" />
             </a>
+
+            <a class="user-link pill" th:href="@{/member/login.html}">로그인</a>
         </div>
     </div>
 </header>
