feat:관리자 페이지 admin 수정

--- a/src/main/resources/templates/order/coupon-register.html
+++ b/src/main/resources/templates/order/coupon-register.html
@@ -119,7 +119,7 @@
 
             <div class="download-coupon-card" th:each="template : ${templates}">
                 <div class="coupon-info-text">
-                    <h4 th:text="${template.name}">쿠폰 이름</h4>
+                    <h4 th:text="${template.couponName}">쿠폰 이름</h4>
                     <p th:text="${template.description}">쿠폰 설명</p>
                 </div>
 
